--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.15.0",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
