--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.1.1",
     "firebase": "^9.15.0",
     "next": "13.1.1",
+    "pigeon-maps": "^0.21.3",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
