--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "firebase": "^9.15.0",
+    "js-cookie": "^3.0.1",
     "next": "13.1.1",
     "pigeon-maps": "^0.21.3",
     "react": "18.2.0",
@@ -24,6 +25,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
